Create basic auth structure

--- a/home.html
+++ b/home.html
@@ -8,6 +8,24 @@
     <title>ValorantStats</title>
 </head>
 <body>
+    <header>
+        <h1>Test</h1>
+    </header>
+    <main class="main-container">
+        <section class="section-container">
+            <h2>Autentícate!</h2>
+            <article class="auth-container">
+                <h2>Login</h2>
+                <div class="auth-options">
+                    <div class="auth-options2">
+                        <button>Mail Auth</button>
+                        <button>Google Auth</button>
+                    </div>
+                    <a href="#" class="other-auth-option">Not registered?</a>
+                </div>
+            </article>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
