Add search and UI structure

--- a/home.html
+++ b/home.html
@@ -5,15 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>ValorantStats</title>
 </head>
 <body>
     <header>
-        <h1>Test</h1>
+        <nav class="header-container">
+            <a href="./home.html" id="valorantlogo-img">
+                <img src="https://www.svgrepo.com/show/424912/valorant-logo-play-2.svg" alt="valorant-logo">
+            </a>
+            <a href="#" id="logout-img">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Logout.svg/2048px-Logout.svg.png" alt="logout">
+            </a>
+        </nav>
     </header>
     <main class="main-container">
-        <section class="section-container">
-            <h2>Autentícate!</h2>
+        <section class="welcome-container">
+            <h2>WELCOME BACK, USER!</h2>
+        </section>
+
+        <section class="search-container">
+            <h2>Search</h2>
+            <input type="text" name="player-search" placeholder="E.g: PlayerName#9084_eu" id="player-search">
+            <span id="search-error"></span>
+            <button class="submit-button" id="search-button">SUBMIT</button>
+        </section>
+    </main>
+            <!-- <h2>Autentícate!</h2>
             <article class="auth-container">
                 <h2>Login</h2>
                 <div class="auth-options">
@@ -23,9 +44,15 @@
                     </div>
                     <a href="#" class="other-auth-option">Not registered?</a>
                 </div>
-            </article>
-        </section>
-    </main>
+            </article> -->
+
+        <footer class="footer-container">
+            <div class="socials-container">
+                <img src="https://cdn-icons-png.flaticon.com/512/37/37409.png" alt="facebook-logo" id="facebooklogo-img">
+                <img src="https://cdn-icons-png.flaticon.com/512/60/60580.png" alt="twitter-logo" id="twitterlogo-img">
+                <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="instagram-logo" id="instagramlogo-img">
+            </div>
+        </footer>
     <script src="script.js"></script>
 </body>
 </html>
