Add search guide structure

--- a/home.html
+++ b/home.html
@@ -33,6 +33,15 @@
             <span id="search-error"></span>
             <button class="submit-button" id="search-button">SUBMIT</button>
         </section>
+
+        <section class="search-guide-container">
+            <h2>SEARCH GUIDE</h2>
+            <ol>
+                <li>Name</li>
+                <li>Tag (#0967)</li>
+                <li>Region (eu/na/ap/kr)</li>
+            </ol>
+        </section>
     </main>
             <!-- <h2>Autentícate!</h2>
             <article class="auth-container">
