Create leaderboard graphic structure with Chart.js

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>ValorantStats</title>
 </head>
 <body>
@@ -42,6 +43,11 @@
                 <li>Region (eu/na/ap/kr)</li>
             </ol>
         </section>
+
+        <section id="players-leaderboard">
+            <canvas id="topplayers"></canvas>
+        </section>
+        
     </main>
             <!-- <h2>Autentícate!</h2>
             <article class="auth-container">
