--- a/home.html
+++ b/home.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="./assets/valorant-logo.ico">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <title>ValorantStats</title>
+    <title>ValorantInfo</title>
 </head>
 <body>
     <header>
@@ -18,14 +17,11 @@
             <a href="./home.html" id="valorantlogo-img">
                 <img src="https://www.svgrepo.com/show/424912/valorant-logo-play-2.svg" alt="valorant-logo">
             </a>
-            <a href="#" id="logout-img">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Logout.svg/2048px-Logout.svg.png" alt="logout">
-            </a>
         </nav>
     </header>
     <main class="main-container">
-        <section class="welcome-container">
-            <h2>WELCOME BACK, USER!</h2>
+        <section class="header-text-container">
+            <h2>WELCOME BACK!</h2>
         </section>
 
         <section class="search-container">
