Fixed GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="header-container">
-            <a href="./home.html" id="valorantlogo-img">
+            <a href="./index.html" id="valorantlogo-img">
                 <img src="https://www.svgrepo.com/show/424912/valorant-logo-play-2.svg" alt="valorant-logo">
             </a>
         </nav>
