Test google ads

--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
         </section>
         
     </main>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7366553964653445"
+     crossorigin="anonymous"></script>
+<!-- asdasdasd -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7366553964653445"
+     data-ad-slot="1938557848"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
             <!-- <h2>Autentícate!</h2>
             <article class="auth-container">
                 <h2>Login</h2>
